templates/gardenlet_template.yaml
---
# Source: gardenlet/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress-from-gardenlet
  namespace: default
  labels:
    app: gardener
    role: gardenlet
    chart: "gardenlet-1.94.1"
    release: "release-name"
    heritage: "Helm"
spec:
  podSelector:
    matchLabels:
      app: gardener
      role: gardenlet
      release: release-name
  egress:
  - to:
    - namespaceSelector: {}
      podSelector: {}
    - ipBlock:
        cidr: 0.0.0.0/0
    - ipBlock:
        cidr: ::/0
  policyTypes:
  - Egress
---
# Source: gardenlet/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gardenlet
  namespace: default
  labels:
    app: gardener
    role: gardenlet
    chart: "gardenlet-1.94.1"
    release: "release-name"
    heritage: "Helm"
  annotations:
    networking.resources.gardener.cloud/from-all-seed-scrape-targets-allowed-ports: '[{"port":2729,"protocol":"TCP"}]'
spec:
  selector:
    app: gardener
    role: gardenlet
    release: release-name
  ports:
  - name: metrics
    protocol: TCP
    port: 2729
    targetPort: 2729
---
# Source: gardenlet/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gardenlet
  namespace: default
  labels:
    high-availability-config.resources.gardener.cloud/skip: "true"
    app: gardener
    role: gardenlet
    chart: "gardenlet-1.94.1"
    release: "release-name"
    heritage: "Helm"
  annotations:
    reference.resources.gardener.cloud/configmap-9aeaaead: gardenlet-configmap-5bab7cdc
spec:
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: gardener
      role: gardenlet
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/scheme: 'http'
        prometheus.io/name: 'gardenlet'
        prometheus.io/port: "2729"
        reference.resources.gardener.cloud/configmap-9aeaaead: gardenlet-configmap-5bab7cdc
      labels:
        app: gardener
        role: gardenlet
        chart: "gardenlet-1.94.1"
        release: "release-name"
        heritage: "Helm"
        projected-token-mount.resources.gardener.cloud/skip: "true"
        seccompprofile.resources.gardener.cloud/skip: "true"
        topology-spread-constraints.resources.gardener.cloud/skip: "true"
        networking.resources.gardener.cloud/to-all-shoots-etcd-main-client-tcp-8080: allowed
        networking.resources.gardener.cloud/to-all-shoots-kube-apiserver-tcp-443: allowed
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: gardener
            role: gardenlet
      priorityClassName: gardener-system-critical
      serviceAccountName: gardenlet
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: gardenlet
        image: europe-docker.pkg.dev/gardener-project/releases/gardener/gardenlet:v1.94.1
        imagePullPolicy: IfNotPresent
        args:
        - --config=/etc/gardenlet/config/config.yaml
        livenessProbe:
          httpGet:
            path: /healthz
            port: 2728
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /readyz
            port: 2728
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: kube-api-access-gardener
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          readOnly: true
        - name: gardenlet-config
          mountPath: /etc/gardenlet/config
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 60
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 60
      volumes:
      - name: kube-api-access-gardener
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              path: token
              expirationSeconds: 43200
          - configMap:
              name: kube-root-ca.crt
              items:
              - key: ca.crt
                path: ca.crt
          - downwardAPI:
              items:
              - path: namespace
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
      - name: gardenlet-config
        configMap:
          name: gardenlet-configmap-5bab7cdc
---
# Source: gardenlet/templates/clusterrole-gardenlet.yaml
# ClusterRole defines the required permissions for the gardenlet in the seed.
# For now, we provide escalation privileges required by gardener-resource-manager.
